<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SocialCalcActivity!</string>
    <string name="app_name">Social Calc</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="start_calc"></string>
    <string name="request">Please keep the phone in protrait</string>
    <string name="delete">DELETE</string>
    <string name="share">SHARE</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="divide">&#247;</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="multiply">x</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="subtract">-</string>
    <string name="point">.</string>
    <string name="zero">0</string>
    <string name="equals">=</string>
    <string name="add">+</string>
    <string name="more">MORE</string>
    <string name="share_info">The sharing feature of Social Calc is not yet complete.</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log</string>
    <string name="factorial">!</string>
    <string name="pi">&#960;</string>
    <string name="e">e</string>
    <string name="power">^</string>
    <string name="open_paren">(</string>
    <string name="close_paren">)</string>
    <string name="root">&#8730;</string>
    <string name="copy">Copy to Clipboard</string>
    <string name="pre_text_prompt">Select pre operation phrase:</string>
    <string name="share_text_prompt">If the share function worked this is what would be posted:</string>
    <string name="network_prompt">Pick your Social medium:</string>
    <string name="twitter">Twitter</string>
    <string name="more_to_come">More to come...</string>
    <string name="doesnt_know">*User* doesn\'t know </string>
    <string name="just_did">*User* just calculated </string>
    <string name="pick">Pick one</string>
    <string name="rad_deg">Radians/Degrees</string>
    <string name="rad_deg_info">Choose to run triginometitric functions in Degree or Radian mode</string>
    <string name="rad">Rad</string>
    <string name="deg">Deg</string>
    <string name="math">Math</string>
    <string name="dec">Decimal Place</string>
    <string name="dec_info">Set the number of decimal places the calculator will round to</string>
    <string name="auth">Authorize</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="twitter_login">Twitter Login</string>
    

</resources>