<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/math" >

        <SwitchPreference
	        android:key="switch_rad_deg"
	        android:title="@string/rad_deg"
	        android:summary="@string/rad_deg_info"
	        android:switchTextOn="@string/rad"
	        android:switchTextOff="@string/deg"
	        android:defaultValue="true" />
        
        <ListPreference
            android:key="list_decimal"
            android:entries="@array/decimal"
            android:dialogTitle="@string/dec"
            android:title="@string/dec"
            android:summary="@string/dec_info"
            android:entryValues="@array/dec_values"
            android:defaultValue="four" />

    </PreferenceCategory>
</PreferenceScreen>